# Computer_Vision

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  Computer_Vision.cpp  Forecaster.cpp  Forecaster.hpp  HSV_Color_Data.json  JSON_Worker.cpp  JSON_Worker.hpp  LICENSE  Monitoring.cpp  Monitoring.hpp  Seeker.cpp  Seeker.hpp  Time.json
